workshop/_files/share/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment
spec:
  selector:
    matchLabels:
      app: my-app
      tier: be
  replicas: 2
  template:
    metadata:
      labels:
        app: my-app
        tier: be
    spec:
      containers:
      - name: echoserver
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: my-app
    tier: be
  sessionAffinity: None
  type: ClusterIP
