workshop/_files/share/ing-demo-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - foo.bar.com
    secretName: foo-cert
  rules:
  - host: foo.bar.com
    http:
      paths:
        - backend:
            service:
              name: backend
              port:
                number: 80
          path: /
          pathType: Prefix
